--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"prettier": "^3.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.11.2",
 		"styled-components": "^6.0.7",
 		"styled-reset": "^4.5.1",
 		"vite-plugin-svgr": "^3.2.0",
